fixing small layout issues

--- a/fs-front/src/components/Avatar/index.css
+++ b/fs-front/src/components/Avatar/index.css
@@ -14,7 +14,7 @@
 
 .dark {
   opacity: 0.6;
-  background-color: black;
+  filter: brightness(20%);
   z-index: 1;
 }
 
@@ -59,8 +59,8 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 50px;
-  transform: translate(-0%, -10%);
-  -ms-transform: translate(-0%, -10%);
+  transform: translate(5%, -10%);
+  -ms-transform: translate(5%, -10%);
   color: #eeeeee;
   top: 30%;
 }
@@ -69,30 +69,4 @@
   height: 30px;
   width: 30px;
   cursor: pointer;
-}
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  top: 100%;
-  left: 50%;
-  margin-left: -60px;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-
-  position: absolute;
-  z-index: 1;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
 }
